; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/smbfs/extr_sock.c_server_sock.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/smbfs/extr_sock.c_server_sock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.smb_sb_info = type { %struct.file* }
%struct.file = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.socket* (%struct.smb_sb_info*)* @server_sock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.socket* @server_sock(%struct.smb_sb_info* %0) #0 {
  %2 = alloca %struct.socket*, align 8
  %3 = alloca %struct.smb_sb_info*, align 8
  %4 = alloca %struct.file*, align 8
  store %struct.smb_sb_info* %0, %struct.smb_sb_info** %3, align 8
  %5 = load %struct.smb_sb_info*, %struct.smb_sb_info** %3, align 8
  %6 = icmp ne %struct.smb_sb_info* %5, null
  br i1 %6, label %7, label %20

7:                                                ; preds = %1
  %8 = load %struct.smb_sb_info*, %struct.smb_sb_info** %3, align 8
  %9 = getelementptr inbounds %struct.smb_sb_info, %struct.smb_sb_info* %8, i32 0, i32 0
  %10 = load %struct.file*, %struct.file** %9, align 8
  store %struct.file* %10, %struct.file** %4, align 8
  %11 = icmp ne %struct.file* %10, null
  br i1 %11, label %12, label %20

12:                                               ; preds = %7
  %13 = load %struct.file*, %struct.file** %4, align 8
  %14 = getelementptr inbounds %struct.file, %struct.file* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call %struct.socket* @SOCKET_I(i32 %18)
  store %struct.socket* %19, %struct.socket** %2, align 8
  br label %21

20:                                               ; preds = %7, %1
  store %struct.socket* null, %struct.socket** %2, align 8
  br label %21

21:                                               ; preds = %20, %12
  %22 = load %struct.socket*, %struct.socket** %2, align 8
  ret %struct.socket* %22
}

declare dso_local %struct.socket* @SOCKET_I(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
